--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,7 @@ on:
       - master
       - ci
       - 'release/**'
+      - 'bugfix/**'
     paths-ignore:
       - 'DOCS/**'
       - 'TOOLS/lua/**'
